--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <header>
         <div class="container">
             <h1>Rakesh Tuladhar</h1>
-            <p>DevOps Engineer | Frontend Developer</p>
+            <p>DevOps Engineer </p>
             <nav>
                 <ul>
                     <li><a href="#about">About</a></li>
@@ -25,7 +25,7 @@
     <section id="about" class="section">
         <div class="container">
             <h2>About Me</h2>
-            <p>I am a passionate DevOps Engineer and Frontend Developer with a keen interest in automation, cloud computing, and building scalable applications.</p>
+            <p>I am a passionate DevOps Engineer with a keen interest in automation, cloud computing, and building scalable applications.</p>
         </div>
     </section>
     
