--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
                 </div>
                 <div class="project-card">
                     <h3>CI/CD Pipeline</h3>
-                    <p>Automated deployment pipeline using GitHub Actions & Docker.</p>
+                    <p>Automated deployment pipeline using Jenkins & Docker.</p>
                     <a href="#">Coming Soon</a>
                 </div>
             </div>
