--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,7 @@
                     <li><a href="#about">About</a></li>
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
+                    <li><a href="#email">Email</a></li>
                 </ul>
             </nav>
         </div>
