--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,7 @@
                     <li><a href="#projects">Projects</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <li><a href="#email">Email</a></li>
+                    <li><a href="#news">News</a></li>
                 </ul>
             </nav>
         </div>
